welcome.lessons.welcome.array.notriples.NoTriples.scala.error
noTriples:2: error: type mismatch;
 found   : Array[Int]
 required: Int
  for (i <- 0 to nums){
                 ^noTriples:3: error: not found: value int
    int u = nums(i);
    ^noTriples:4: error: not found: value u
    if (nums(i+1)==u && nums(i+2)==u){
                   ^noTriples:4: error: not found: value u
    if (nums(i+1)==u && nums(i+2)==u){
                                   ^